# DRGxCoder

./: .gitignore  APPROVAL_PAGE_UI_IMPROVEMENTS.md  APPROVAL_PHASE1_COMPLETE.md  APPROVAL_REJECT_EDIT_TODO.md  APPROVAL_SYSTEM_PLAN.md  APPROVAL_UI_COMPLETE.md  CORRECTIONS_IMPLEMENTATION_PLAN.md  CORRECTIONS_SYSTEM_COMPLETE.md  FRONTEND_FIXES.md  FRONTEND_TODO_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  NAVIGATION_SYSTEM.md  PHASE2_COMPLETE.md  PRODUCTION_IMPLEMENTATION_STATUS.md  PRODUCTION_READY_PLAN.md  PROJECT_OVERVIEW.md  RAILWAY_DEPLOYMENT_GUIDE.md  SESSION_COMPLETE.md  SUMMARY.md  TODO.md  project_description.md  pyproject.toml
backend/: Dockerfile  README.md  apply_migration.py  nixpacks.toml  pyproject.toml  requirements.txt  run_migration.py  run_migration.sh  test_api_calls.py  test_feedback.sh
backend/app/: __init__.py  corrections.py  database.py  main.py  models.py  services.py  utils.py
backend/data/: .gitignore  abbreviation_expander.py  diagnosis_codes.csv  medical_abbreviations.csv  patient_cases.json
backend/migrations/: add_original_fields.sql
backend/prisma/: schema.prisma
fe/: drg-cz-scrape.html  frontend-architecture.md  frontend-design.md  index.html  package-lock.json  package.json
frontend/: README.md  TODO.md  package-lock.json  package.json  tailwind.config.ts
results_drg_naive_coder/: drg_results_google_gemini-3-pro-preview_limit1.json  drg_results_google_gemini-3-pro-preview_limit1_usage.json
testing/: gemini_segmented_search.py  match_diagnoses.py  run_segmented_search.py
zadani/: Export.doc
(+142 files in other folders)
